infra/onprem/k3s/addons/manifests/garage-ingress-acme.yaml
# Nome pubblico dello storage, con il certificato che Traefik ottiene dal suo
# resolver ACME. Modello di storage.sh (--cert-resolver).
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: @@NAME@@
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: @@RELEASE@@
    app.kubernetes.io/part-of: pa-webinar
    app.kubernetes.io/managed-by: pa-webinar-addons
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: @@CERT_RESOLVER@@
spec:
  ingressClassName: traefik
  tls:
    - hosts: [@@HOST@@]
  rules:
    - host: @@HOST@@
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: @@NAME@@
                port:
                  name: s3
